--- a/docs/cm_db_knowledge.yaml
+++ b/docs/cm_db_knowledge.yaml
@@ -16,44 +16,105 @@
 # → top_k_table_name search from 'database_documents'
 # → (tool_name, reason, top_k RFI contexts, top_k_table_name, top_k_table_schema)
 
-document_document.due_date is document due date
-document_submittal.due_date is initiator due date
+# document_document.due_date is document due date
+# document_submittal.due_date is initiator due date
+
+# document_status   == task_decision  == document_document."status"
+# RFI Status        == process_status == document_document."process"
+# submittal_status  == process_status == document_submittal."status"
+# inspection_status == process_status == document_inspection."status"
+
+# Task Decision of all document (RFI, Submittal, Inspection)
+# (document_document."status")
+# DOCUMENT_STATUS_INVALID = -1
+# DOCUMENT_STATUS_PENDING = 0
+# DOCUMENT_STATUS_IN_PROCESS = 1
+# DOCUMENT_STATUS_APPROVED = 2
+# DOCUMENT_STATUS_APPROVED_AS_NOTE = 3
+# DOCUMENT_STATUS_REJECTED = 4
+# DOCUMENT_STATUS_REJECTED_AS_NOTE = 5
+# DOCUMENT_STATUS_DELETED = 6
+
+# Process Status of all document (RFI, Submittal, Inspection)
+# (document_document."process")
+# DOCUMENT_PROCESS_DRAFT = 0
+# DOCUMENT_PROCESS_REVIEW = 1
+# DOCUMENT_PROCESS_OPEN = 2
+# DOCUMENT_PROCESS_WAITING_FOR_MANAGER = 3
+# DOCUMENT_PROCESS_CLOSED = 4
+
+# Initiator Status of Submittal
+# (document_submittal."status")
+# INITIATOR_STATUS_PENDING = 0
+# INITIATOR_STATUS_APPROVED = 1
+# INITIATOR_STATUS_APPROVED_AS_NOTE = 2
+# INITIATOR_STATUS_REJECTED = 3
+# INITIATOR_STATUS_REJECTED_AS_NOTE = 4
+# INITIATOR_STATUS_CHANGE_BIC = 5
+
+# Inspector Status of Inspection
+# INSPECTOR_STATUS_PENDING = 0
+# INSPECTOR_STATUS_APPROVED = 1
+# INSPECTOR_STATUS_APPROVED_AS_NOTE = 2
+# INSPECTOR_STATUS_REJECTED = 3
+# INSPECTOR_STATUS_REJECTED_AS_NOTE = 4
+# INSPECTOR_STATUS_CHANGE_BIC = 5
+
+# Assignnee Status of all document (RFI, Submittal, Inspection)
+# ASSIGNMENT_STATUS_PENDING = 0
+# ASSIGNMENT_STATUS_APPROVED = 1
+# ASSIGNMENT_STATUS_APPROVED_AS_NOTE = 2
+# ASSIGNMENT_STATUS_REJECTED = 3
+# ASSIGNMENT_STATUS_REJECTED_AS_NOTE = 4
+# ASSIGNMENT_STATUS_CHANGE_BIC = 5
+
+# Manager Status
+# MANAGER_STATUS_PENDING = 0
+# MANAGER_STATUS_APPROVED = 1
+# MANAGER_STATUS_APPROVED_AS_NOTE = 2
+# MANAGER_STATUS_REJECTED = 3
+# MANAGER_STATUS_REJECTED_AS_NOTE = 4
+# MANAGER_STATUS_CHANGE_BIC = 5
+
 version: "1.0"
 
 database_docs:
   tables:
     document_document:
-      description: "document_document is a super table for all document types (RFI, Submittal, Inspection)."
+      name: "document_document"
+      description: >
+        document_document is a master table for all document types (RFI, Submittal, Inspection).
       fields:
         - id: "[BIGINT] Primary key"
-        - deleted: "[TIMESTAMP] Indicates if this object has been deleted"
-        - deleted_by_cascade: "[BOOLEAN] Indicates if this object has been deleted by cascade"
-        - created_at: "[TIMESTAMP] date and time when this object was created"
-        - updated_at: "[TIMESTAMP] date and time when this object was updated"
-        - code: "[VARCHAR(50)] the unique code for this document"
-        - title: "[VARCHAR(255)] the title of this document"
-        - type: "[INTEGER] the ENUM type of this document. (0 = RFI, 1 = Submittal, 2 = Inspection)"
-        - process: "[INTEGER] the ENUM of 'Process status' (state/status of each document type) of this document. (0 = Draft, 1 = Review, 2 = Open, 3 = Waiting For Manager, 4 = Closed)"
-        - status: "[INTEGER] the ENUM of 'Task decision 'of each document type. (0 = Invalid, 1 = Pending, 2 = In Process, 3 = Approved, 4 = Approved as Note, 5 = Rejected, 6 = Rejected as Note, 7 = Deleted)"
-        - due_date: "[TIMESTAMP] the due date of document (Including RFI, Submittal and Inspection)"
-        - schedule_impact: "[DOUBLE PRECISION] schedule impact of this document"#TODO: What's meaning of this field
-        - cost_impact: "[DOUBLE PRECISION] cost impact of this document"#TODO: What's meaning of this field
-        - drawing_number: "[VARCHAR(255)] drawing number of this document"#TODO: What's meaning of this field
-        - cycle: "[INTEGER] the cycle of this document"#TODO: What's meaning of this field
-        - is_private: "[BOOLEAN] indicates if this document is private"#TODO: What's meaning of this field
-        - description: "[TEXT] the description of this document"#TODO: What's meaning of this field
-        - created_by_id: "[INTEGER] the id of user who created this document. This is a foreign key to auth_user.id (document_document.created_by_id → auth_user.id)"#TODO: Foriegn key
-        - discipline_id: "[BIGINT] the id of discipline of this document. This is a foreign key to company_discipline.id (document_document.discipline_id → company_discipline.id)"#TODO: Foriegn key
-        - location_id: "[BIGINT] the id of location of this document. This is a foreign key to project_location.id (document_document.location_id → project_location.id)"#TODO: Foriegn key
-        - project_id: "[BIGINT] the id of project of this document. This is a foreign key to project_project.id (document_document.project_id → project_project.id)"#TODO: Foriegn key
-        - specification_id: "[BIGINT] the id of specification of this document. This is a foreign key to project_specification.id (document_document.specification_id → project_specification.id)"#TODO: Foriegn key
-        - template_id: "[BIGINT] the id of template of this document. This is a foreign key to document_template.id (document_document.template_id → document_template.id)"#TODO: Foriegn key
-        - updated_by_id	order: "[BIGINT] the id of user who updated this document. This is a foreign key to auth_user.id (document_document.updated_by_id → auth_user.id)"#TODO: Foriegn key
-        - received_from_id: "[BIGINT] the id of user who received this document. This is a foreign key to auth_user.id (document_document.received_from_id → auth_user.id)"#TODO: Foriegn key
-        - inspection_test_plan_id: "[BIGINT] the id"#TODO: Foriegn key
-        - responsible_contractor_id: "[BIGINT] the id of responsible contractor of this document. This is a foreign key to company_contractor.id (document_document.responsible_contractor_id → company_contractor.id)"#TODO: Foriegn key
-        - is_recently_rejected: "[BOOLEAN] indicates if this document is recently rejected"#TODO: What's meaning of this field
-        - floor_plan_id: "[BIGINT] the id of floor plan of this document. This is a foreign key to project_floorplan.id (document_document.floor_plan_id → project_floorplan.id)"#TODO: Foriegn key
+        - deleted: "[TIMESTAMP] Indicates when this object was deleted"
+        # - deleted_by_cascade: "[BOOLEAN] Indicates whether this object was deleted through cascade"
+        - created_at: "[TIMESTAMP] Date and time when this object was created"
+        # - updated_at: "[TIMESTAMP] Date and time when this object was last updated"
+        - code: "[VARCHAR(50)] Unique code for this document"
+        - title: "[VARCHAR(255)] Title of this document"
+        - type: "[INTEGER] ENUM type of this document (0 = RFI, 1 = Submittal, 2 = Inspection)"
+        - process: "[INTEGER] ENUM for the process status of each document type (0 = Draft, 1 = Review, 2 = Open, 3 = Waiting for Manager, 4 = Closed)"
+        - status: "[INTEGER] ENUM for the task decision of each document type (0 = Invalid, 1 = Pending, 2 = In Process, 3 = Approved, 4 = Approved as Note, 5 = Rejected, 6 = Rejected as Note, 7 = Deleted)"
+        - due_date: "[TIMESTAMP] Due date of the document (applies to RFI, Submittal, and Inspection)"
+        - schedule_impact: "[DOUBLE PRECISION] Number of days this document impacts the project schedule"
+        - cost_impact: "[DOUBLE PRECISION] Amount this document impacts the project cost (default in USD)"
+        - drawing_number: "[VARCHAR(255)] Reference drawing number for this document (if any). Used to associate multiple documents with a single drawing"
+        - cycle: "[INTEGER] Number of times this document has been revised"
+        - is_private: "[BOOLEAN] Indicates whether this document is private"
+        - description: "[TEXT] Field for additional information about this document"
+        - created_by_id: "[INTEGER] the id of user who created this document. This is a foreign key to auth_user.id (document_document.created_by_id → auth_user.id)"
+        - discipline_id: "[BIGINT] the id of discipline of this document. This is a foreign key to company_discipline.id (document_document.discipline_id → company_discipline.id)"
+        - location_id: "[BIGINT] the id of location of this document. This is a foreign key to project_location.id (document_document.location_id → project_location.id)"
+        - project_id: "[BIGINT] the id of project of this document. This is a foreign key to project_project.id (document_document.project_id → project_project.id)"
+        - specification_id: "[BIGINT] the id of specification of this document. This is a foreign key to project_specification.id (document_document.specification_id → project_specification.id)"
+        - template_id: "[BIGINT] the id of template of this document. This is a foreign key to document_template.id (document_document.template_id → document_template.id)"
+        - updated_by_id: "[BIGINT] the id of user who updated this document. This is a foreign key to auth_user.id (document_document.updated_by_id → auth_user.id)"
+        # - order: #TODO: What's is this?
+        - received_from_id: "[BIGINT] the id of user who received this document. This is a foreign key to auth_user.id (document_document.received_from_id → auth_user.id)"
+        - inspection_test_plan_id: "[BIGINT] the id"
+        - responsible_contractor_id: "[BIGINT] the id of responsible contractor of this document. This is a foreign key to company_contractor.id (document_document.responsible_contractor_id → company_contractor.id)"
+        - is_recently_rejected: "[BOOLEAN] the recently rejected flag of this document indicates if this document has been recently rejected. This is used to highlight the document in the document list"
+        - floor_plan_id: "[BIGINT] the id of floor plan of this document. This is a foreign key to project_floorplan.id (document_document.floor_plan_id → project_floorplan.id)"
       relations:
         - document_document.created_by_id → auth_user.id
         - document_document.discipline_id → company_discipline.id
@@ -68,28 +129,33 @@ database_docs:
         - document_document.updated_by_id → auth_user.id
 
     document_submittal:
+      name: "document_submittal"
       description: >
-        document_submittal is a extension of table::document_document for submittal. It contains additional fields. i.e. document_number, rev, due_date, status, response, response_date, round, cycle, is_latest, created_by_id, document_id, updated_by_id, user_id, rejected_to
+        document_submittal is an extension of table::document_document for submittals. 
+        It contains additional fields such as document_number, rev, due_date, status, 
+        response, response_date, round, cycle, is_latest, created_by_id, document_id, 
+        updated_by_id, user_id, and rejected_to. 
+        Used for managing and tracking submittal-specific information.
       fields:
         - id: "[BIGINT] Primary key"
-        - deleted: "[TIMESTAMP] Indicates if this object has been deleted"
-        - deleted_by_cascade: "[BOOLEAN] indicates if this object has been deleted by cascade"
-        - created_at: "[TIMESTAMP] the time this object was created"# TODO: what's different between document_document.created_at and document_submittal.created_at
-        - updated_at: "[TIMESTAMP] the time this object was updated"# TODO: what's different between document_document.updated_at and document_submittal.updated_at
-        - document_number: "[VARCHAR(155)] the document number of this submittal"#TODO: What's meaning of this field
-        - rev: "[VARCHAR(2)] the revision of this submittal"#TODO: What's meaning of this field
-        - due_date: "[TIMESTAMP] the due date of this submittal's initiator"
-        - status: "[INTEGER] the status of this submittal's initiator. (0 = Pending, 1 = Approved, 2 = Approved as Note, 3 = Rejected, 4 = Rejected as Note, 5 = Change BIC)"
-        - response: "[TEXT] the response of this submittal"#TODO: What's meaning of this field
-        - response_date: "[TIMESTAMP] the response date of this submittal"#TODO: What's meaning of this field
-        - round: "[INTEGER] the round of this submittal"#TODO: What's meaning of this field
-        - cycle: "[INTEGER] the cycle of this submittal"#TODO: What's meaning of this field
-        - is_latest: "[BOOLEAN] indicates if this submittal is latest"#TODO: What's meaning of this field
-        - created_by_id: "[INTEGER] the id of user who created this submittal. This is a foreign key to auth_user.id (document_submittal.created_by_id → auth_user.id)"#TODO: Foriegn key
-        - document_id: "[BIGINT] the id of document of this submittal. This is a foreign key to document_document.id (document_submittal.document_id → document_document.id)"#TODO: Foriegn key
-        - updated_by_id: "[INTEGER] the id of user who updated this submittal. This is a foreign key to auth_user.id (document_submittal.updated_by_id → auth_user.id)"#TODO: Foriegn key
-        - user_id: "[INTEGER] the id of initiator of this submittal. This is a foreign key to auth_user.id (document_submittal.user_id → auth_user.id)"#TODO: Foriegn key
-        - rejected_to: "[VARCHAR(20)] the rejected to of this submittal"#TODO: What's meaning of this field
+        # - deleted: "[TIMESTAMP] Indicates if this object has been deleted"
+        # - deleted_by_cascade: "[BOOLEAN] indicates if this object has been deleted by cascade"
+        # - created_at: "[TIMESTAMP] the time this object was created"# NOTE: what's different between document_document.created_at and document_submittal.created_at
+        # - updated_at: "[TIMESTAMP] the time this object was updated"# NOTE: what's different between document_document.updated_at and document_submittal.updated_at
+        - document_number: "[VARCHAR(155)] User-defined document number for this submittal, used to track and identify the submittal document"
+        - rev: "[VARCHAR(2)] Revision of this submittal document, uniquely identifying each version of the same document number"
+        - due_date: "[TIMESTAMP] Due date set by the submittal’s initiator" #note: when joined with document_document, document_document.due_date refers to the manager’s due date)"
+        - status: "[INTEGER] Status of the submittal’s initiator (0 = Pending, 1 = Approved, 2 = Approved as Note, 3 = Rejected, 4 = Rejected as Note, 5 = Change BIC)"
+        - response: "[TEXT] Acknowledgment or response message from the initiator who received this submittal"
+        - response_date: "[TIMESTAMP] Date and time when the initiator responded to this submittal"
+        - round: "[INTEGER] Number of times this submittal has been rejected in the workflow. Each rejection increases the round by 1 and starts a new cycle"
+        - cycle: "[INTEGER] Number of times this submittal has been revised"
+        # - is_latest: "[BOOLEAN] THIS FIELD IS DEPRECATED. DOES NOT USED ANYMORE"
+        - created_by_id: "[INTEGER] the id of user who created this submittal. This is a foreign key to auth_user.id (document_submittal.created_by_id → auth_user.id)"
+        - document_id: "[BIGINT] the id of document of this submittal. This is a foreign key to document_document.id (document_submittal.document_id → document_document.id)"
+        - updated_by_id: "[INTEGER] the id of user who updated this submittal. This is a foreign key to auth_user.id (document_submittal.updated_by_id → auth_user.id)"
+        - user_id: "[INTEGER] the id of initiator of this submittal. This is a foreign key to auth_user.id (document_submittal.user_id → auth_user.id)"
+        - rejected_to: "[VARCHAR(20)] the rejected to of this submittal is a enum field to indicate the step that this submittal has been rejected to. (values are: manager, initiator, originator, assignee (integer convertable value indicates what is step in workflow that rejected to))"
       relations:
         - document_submittal.created_by_id → auth_user.id
         - document_submittal.document_id → document_document.id
@@ -97,20 +163,21 @@ database_docs:
         - document_submittal.user_id → auth_user.id
 
     document_inspection:
-      descriptive: "document_inspection table"
+      name: "document_inspection"
+      description: "document_inspection table"
       fields:
         - id: "[BIGINT] Primary key"
-        - deleted: "[TIMESTAMP] Indicates if this object has been deleted"
-        - deleted_by_cascade: "[BOOLEAN] indicates if this object has been deleted by cascade"
-        - created_at: "[TIMESTAMP] the time this object was created"
-        - updated_at: "[TIMESTAMP] the time this object was updated"
-        - due_date: "[TIMESTAMP] the due date of this inspection"
-        - status: "[INTEGER] the status of this inspection"
-        - response: "[TEXT] the response of this inspection"
-        - response_date: "[TIMESTAMP] the response date of this inspection"
-        - round: "[INTEGER] the round of this inspection"
-        - cycle: "[INTEGER] the cycle of this inspection"
-        - is_latest: "[BOOLEAN] indicates if this inspection is latest"
+        # - deleted: "[TIMESTAMP] Indicates if this object has been deleted"
+        # - deleted_by_cascade: "[BOOLEAN] indicates if this object has been deleted by cascade"
+        # - created_at: "[TIMESTAMP] the time this object was created"
+        # - updated_at: "[TIMESTAMP] the time this object was updated"
+        - due_date: "[TIMESTAMP] Due date set by the inspector" #note: when joined with document_document, document_document.due_date refers to the manager’s due date
+        - status: "[INTEGER] Status of the inspector (0 = Pending, 1 = Approved, 2 = Approved as Note, 3 = Rejected, 4 = Rejected as Note, 5 = Change BIC)"
+        - response: "[TEXT] Acknowledgment or response message from the inspector who received this inspection"
+        - response_date: "[TIMESTAMP] Date and time when the inspector responded to this submittal"
+        - round: "[INTEGER] Number of times this inspection has been rejected in the workflow. Each rejection increases the round by 1 and starts a new cycle"
+        - cycle: "[INTEGER] Number of times this inspection has been revised"
+        # - is_latest: "[BOOLEAN] indicates if this inspection is latest"
         - created_by_id: "[INTEGER] the id of user who created this inspection. This is a foreign key to auth_user.id (document_inspection.created_by_id → auth_user.id)"
         - document_id: "[BIGINT] the id of document of this inspection. This is a foreign key to document_document.id (document_inspection.document_id → document_document.id)"
         - updated_by_id: "[INTEGER] the id of user who updated this inspection. This is a foreign key to auth_user.id (document_inspection.updated_by_id → auth_user.id)"
