Update environment configuration and manage assets
- Modify POSTGRES_URI and other environment variables for consistency
- Add new chatcm_agentic_graph.png asset
- Remove outdated blueprint.jpg and site_a.jpg images

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-POSTGRES_URI=postgresql://username:password@localhost:5432/postgres
+POSTGRES_URI=postgresql://username:pwd@localhost:5432/postgres
 QDRANT_URL=localhost:6333
-LLM_MODEL=qwen3:0.6b
-EMBEDED_MODEL_NAME="nomic-embed-text:latest"
-QDRANT_COLLECTION_NAME="CM-Database-Knowledges"
-DOCS_NAME="cm-database-knowledges.json"
+EMBEDED_MODEL_NAME="bge-m3:latest"
+QDRANT_COLLECTION_NAME="CM-DB-KNOWLEDGE"
+DOCS_NAME="docs/cm-database-knowledges.json"
 BRAVE_API_KEY=
-WEATHER_ACCESS_TOKEN=<bearer token>
-WEATHER_URL=https://data.tmd.go.th/nwpapi/v1/forecast/area/place
+WEATHER_ACCESS_TOKEN=
+WEATHER_URL="https://data.tmd.go.th/nwpapi/v1/forecast/area/region"
 LANGSMITH_TRACING="true"
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
 LANGSMITH_API_KEY=
-LANGSMITH_PROJECT="Chat-CM"
+LANGSMITH_PROJECT="Tracing"
+NVIDIA_LLM_API_KEY=
