Update .env.example and refactor cm_tool_agent to enhance ToolAgentFactory and streamline imports

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+DB_DOCS="docs/cm_db_knowledge.yaml"
 POSTGRES_URI=postgresql://username:pwd@localhost:5432/postgres
 QDRANT_URL=localhost:6333
 EMBEDED_MODEL_NAME="bge-m3:latest"
