--- a/docs/cm_db_knowledge.yaml
+++ b/docs/cm_db_knowledge.yaml
@@ -99,25 +99,25 @@ database_docs:
         - process: "[INTEGER] ENUM for the process status of each document type (0 = Draft, 1 = Review, 2 = Open, 3 = Waiting for Manager, 4 = Closed)"
         - status: "[INTEGER] ENUM for the task decision of each document type (-1 = Invalid, 0 = Pending, 1 = In Process, 2 = Approved, 3 = Approved as Note, 4 = Rejected, 5 = Rejected as Note, 6 = Deleted)"
         - due_date: "[TIMESTAMP] Due date of the document (applies to RFI, Submittal, and Inspection)"
-        - schedule_impact: "[DOUBLE PRECISION] Number of days this document impacts the project schedule"
-        - cost_impact: "[DOUBLE PRECISION] Amount this document impacts the project cost (default in USD)"
-        - drawing_number: "[VARCHAR(255)] Reference drawing number for this document (if any). Used to associate multiple documents with a single drawing"
-        - cycle: "[INTEGER] Number of times this document has been revised"
+        # - schedule_impact: "[DOUBLE PRECISION] Number of days this document impacts the project schedule"
+        # - cost_impact: "[DOUBLE PRECISION] Amount this document impacts the project cost (default in USD)"
+        # - drawing_number: "[VARCHAR(255)] Reference drawing number for this document (if any). Used to associate multiple documents with a single drawing"
+        # - cycle: "[INTEGER] Number of times this document has been revised"
         - is_private: "[BOOLEAN] Indicates whether this document is private"
-        - description: "[TEXT] Field for additional information about this document"
+        # - description: "[TEXT] Field for additional information about this document"
         - created_by_id: "[INTEGER] the id of user who created this document. This is a foreign key to auth_user.id (document_document.created_by_id → auth_user.id)"
         - discipline_id: "[BIGINT] the id of discipline of this document. This is a foreign key to company_discipline.id (document_document.discipline_id → company_discipline.id)"
         - location_id: "[BIGINT] the id of location of this document. This is a foreign key to project_location.id (document_document.location_id → project_location.id)"
         - project_id: "[BIGINT] the id of project of this document. This is a foreign key to project_project.id (document_document.project_id → project_project.id)"
         - specification_id: "[BIGINT] the id of specification of this document. This is a foreign key to project_specification.id (document_document.specification_id → project_specification.id)"
         - template_id: "[BIGINT] the id of template of this document. This is a foreign key to document_template.id (document_document.template_id → document_template.id)"
-        - updated_by_id: "[BIGINT] the id of user who updated this document. This is a foreign key to auth_user.id (document_document.updated_by_id → auth_user.id)"
+        # - updated_by_id: "[BIGINT] the id of user who updated this document. This is a foreign key to auth_user.id (document_document.updated_by_id → auth_user.id)"
         # - order: #TODO: What's is this?
-        - received_from_id: "[BIGINT] the id of user who received this document. This is a foreign key to auth_user.id (document_document.received_from_id → auth_user.id)"
-        - inspection_test_plan_id: "[BIGINT] the id"
-        - responsible_contractor_id: "[BIGINT] the id of responsible contractor of this document. This is a foreign key to company_contractor.id (document_document.responsible_contractor_id → company_contractor.id)"
-        - is_recently_rejected: "[BOOLEAN] the recently rejected flag of this document indicates if this document has been recently rejected. This is used to highlight the document in the document list"
-        - floor_plan_id: "[BIGINT] the id of floor plan of this document. This is a foreign key to project_floorplan.id (document_document.floor_plan_id → project_floorplan.id)"
+        # - received_from_id: "[BIGINT] the id of user who received this document. This is a foreign key to auth_user.id (document_document.received_from_id → auth_user.id)"
+        # - inspection_test_plan_id: "[BIGINT] the id"
+        # - responsible_contractor_id: "[BIGINT] the id of responsible contractor of this document. This is a foreign key to company_contractor.id (document_document.responsible_contractor_id → company_contractor.id)"
+        # - is_recently_rejected: "[BOOLEAN] the recently rejected flag of this document indicates if this document has been recently rejected. This is used to highlight the document in the document list"
+        # - floor_plan_id: "[BIGINT] the id of floor plan of this document. This is a foreign key to project_floorplan.id (document_document.floor_plan_id → project_floorplan.id)"
       relations:
         - document_document.created_by_id → auth_user.id
         - document_document.discipline_id → company_discipline.id
@@ -215,30 +215,30 @@ database_docs:
         # - updated_at: "[TIMESTAMP] the time this object was updated"
         - code: "[VARCHAR(155)] Project code"
         - title: "[VARCHAR(155)] Project title"
-        - uuid: "[VARCHAR(155)] Project uuid"
-        - image: "[VARCHAR(155)] Project image"
-        - value: "[DOUBLE PRECISION] Project value"
-        - size: "[DOUBLE PRECISION] Project size"
-        - description: "[VARCHAR(155)] Project description"
-        - start_date: "[TIMESTAMP] Project start date"
-        - end_date: "[TIMESTAMP] Project end date"
+        # - uuid: "[VARCHAR(155)] Project uuid"
+        # - image: "[VARCHAR(155)] Project image"
+        # - value: "[DOUBLE PRECISION] Project value"
+        # - size: "[DOUBLE PRECISION] Project size"
+        # - description: "[VARCHAR(155)] Project description"
+        # - start_date: "[TIMESTAMP] Project start date"
+        # - end_date: "[TIMESTAMP] Project end date"
         - company_id: "[BIGINT] the id of company of this project. This is a foreign key to company_company.id (project_project.company_id → company_company.id)"
-        - created_by_id: "[INTEGER] the id of user who created this project. This is a foreign key to auth_user.id (project_project.created_by_id → auth_user.id)"
-        - process_id: "[BIGINT] the id of process of this project. This is a foreign key to project_process.id (project_project.process_id → project_process.id)"
-        - project_type_id: "[BIGINT] the id of project type of this project. This is a foreign key to project_project_type.id (project_project.project_type_id → project_project_type.id)"
-        - updated_by_id: "[INTEGER] the id of user who updated this project. This is a foreign key to auth_user.id (project_project.updated_by_id → auth_user.id)"
-        - address: "[VARCHAR(155)] Project address"
-        - city: "[VARCHAR(155)] Project city"
-        - country: "[VARCHAR(155)] Project country"
-        - fax: "[VARCHAR(155)] Project fax"
-        - latitude: "[DOUBLE PRECISION] Project latitude"
-        - longitude: "[DOUBLE PRECISION] Project longitude"
-        - phone: "[VARCHAR(155)] Project phone"
-        - postcode: "[VARCHAR(155)] Project postcode"
-        - state: "[VARCHAR(155)] Project state"
-        - time_zone: "[VARCHAR(155)] Project time zone"
-        - zone: "[VARCHAR(155)] Project zone"
-        - currency_id: "[BIGINT] the id of currency of this project. This is a foreign key to project_currency.id (project_project.currency_id → project_currency.id)"
+        # - created_by_id: "[INTEGER] the id of user who created this project. This is a foreign key to auth_user.id (project_project.created_by_id → auth_user.id)"
+        # - process_id: "[BIGINT] the id of process of this project. This is a foreign key to project_process.id (project_project.process_id → project_process.id)"
+        # - project_type_id: "[BIGINT] the id of project type of this project. This is a foreign key to project_project_type.id (project_project.project_type_id → project_project_type.id)"
+        # - updated_by_id: "[INTEGER] the id of user who updated this project. This is a foreign key to auth_user.id (project_project.updated_by_id → auth_user.id)"
+        # - address: "[VARCHAR(155)] Project address"
+        # - city: "[VARCHAR(155)] Project city"
+        # - country: "[VARCHAR(155)] Project country"
+        # - fax: "[VARCHAR(155)] Project fax"
+        # - latitude: "[DOUBLE PRECISION] Project latitude"
+        # - longitude: "[DOUBLE PRECISION] Project longitude"
+        # - phone: "[VARCHAR(155)] Project phone"
+        # - postcode: "[VARCHAR(155)] Project postcode"
+        # - state: "[VARCHAR(155)] Project state"
+        # - time_zone: "[VARCHAR(155)] Project time zone"
+        # - zone: "[VARCHAR(155)] Project zone"
+        # - currency_id: "[BIGINT] the id of currency of this project. This is a foreign key to project_currency.id (project_project.currency_id → project_currency.id)"
       relations:
         - project_project.company_id → company_company.id
         - project_project.created_by_id → auth_user.id
@@ -257,18 +257,18 @@ database_docs:
         # - deleted_by_cascade: "[BOOLEAN] indicates if this object has been deleted by cascade"
         - created_at: "[TIMESTAMP] the time this object was created"
         # - updated_at: "[TIMESTAMP] the time this object was updated"
-        - code: "[VARCHAR(155)] Company code"
-        - title: "[VARCHAR(155)] Company title"
-        - address: "[VARCHAR(155)] Company address"
-        - logo: "[VARCHAR(155)] Company logo"
-        - subtitle_color: "[VARCHAR(155)] Company subtitle color"
-        - title_color: "[VARCHAR(155)] Company title color"
-        - uuid: "[VARCHAR(155)] Company uuid"
-        - watermark: "[VARCHAR(155)] Company watermark"
-        - project_amount: "[DOUBLE PRECISION] Project amount"
-        - storage_usage: "[DOUBLE PRECISION] Storage usage"
-        - user_amount: "[DOUBLE PRECISION] User amount"
-        - company_limit_id: "[BIGINT] the id of company limit of this company. This is a foreign key to company_company_limit.id (company_company.company_limit_id → company_company_limit.id)"
+        # - code: "[VARCHAR(155)] Company code"
+        # - title: "[VARCHAR(155)] Company title"
+        # - address: "[VARCHAR(155)] Company address"
+        # - logo: "[VARCHAR(155)] Company logo"
+        # - subtitle_color: "[VARCHAR(155)] Company subtitle color"
+        # - title_color: "[VARCHAR(155)] Company title color"
+        # - uuid: "[VARCHAR(155)] Company uuid"
+        # - watermark: "[VARCHAR(155)] Company watermark"
+        # - project_amount: "[DOUBLE PRECISION] Project amount"
+        # - storage_usage: "[DOUBLE PRECISION] Storage usage"
+        # - user_amount: "[DOUBLE PRECISION] User amount"
+        # - company_limit_id: "[BIGINT] the id of company limit of this company. This is a foreign key to company_company_limit.id (company_company.company_limit_id → company_company_limit.id)"
       relations:
         - company_company.company_limit_id → company_company_limit.id
       enums:
