Update environment variables in .env.example; enhance README.md with detailed architecture and flow; refactor main.py to use chatcm_agent instead of ChatCM.

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,6 @@ LANGSMITH_TRACING="true"
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
 LANGSMITH_API_KEY=
 LANGSMITH_PROJECT="Tracing"
+OPEN_ROUTER_API_KEY=
 NVIDIA_LLM_API_KEY=
+OLLAMA_URL=localhost:11434
