--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,21 @@
-services:
-  qdrant:
-    image: qdrant/qdrant:latest
-    restart: always
-    container_name: qdrant
-    ports:
-      - 6333:6333
-      - 6334:6334
-    expose:
-      - 6333
-      - 6334
-      - 6335
-    configs:
-      - source: qdrant_config
-        target: /qdrant/config/production.yaml
-    volumes:
-      - ./qdrant_data:/qdrant/storage
+version: "3.9"
 
-configs:
-  qdrant_config:
-    content: |
-      log_level: INFO
+services:
+  chatcm-demo:
+    build: .
+    image: chatcm-demo:latest
+    container_name: chatcm_app
+    ports:
+      - "8501:8501"
+    # GPU Support (Docker Compose v2.0+)
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - capabilities: [gpu]
+    environment:
+      # optional: if your app needs CUDA visible
+      NVIDIA_VISIBLE_DEVICES: all
+      NVIDIA_DRIVER_CAPABILITIES: compute,utility
+    env_file:
+      - .env
