Add .dockerignore file and update .env.example; refine docker-compose.yml for improved configuration

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,7 @@
 DB_DOCS="docs/cm_db_knowledge.yaml"
-POSTGRES_URI=postgresql://username:pwd@localhost:5432/postgres
-QDRANT_URL=localhost:6333
-EMBEDED_MODEL_NAME="bge-m3:latest"
-QDRANT_COLLECTION_NAME="CM-DB-KNOWLEDGE"
-DOCS_NAME="docs/cm-database-knowledges.json"
-BRAVE_API_KEY=
-WEATHER_ACCESS_TOKEN=
-WEATHER_URL="https://data.tmd.go.th/nwpapi/v1/forecast/area/region"
+POSTGRES_URI=postgresql://username:password@localhost:5432/cm
 LANGSMITH_TRACING="true"
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
 LANGSMITH_API_KEY=
-LANGSMITH_PROJECT="Tracing"
-OPEN_ROUTER_API_KEY=
+LANGSMITH_PROJECT="ChatCM-Tracing"
 NVIDIA_LLM_API_KEY=
-OLLAMA_URL=localhost:11434
